Fix update PC and component alignment
Don't you love CSS and JS. They can be silly sometimes

--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,7 @@ html, body {
   	height: 100vh;
   	width: 100vw;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	scroll-behavior: smooth;
 	scrollbar-width: 0.5em;
 	font-family: 'Work Sans', sans-serif;
